Fixing production release workflow, making list locking work
